api-reference/rest-apis/v1/workspace/add-domain.mdx
---
title: "Add workspace domains (v1)"
description: "Add allowed domains to your Velt workspace using the v1 REST API. Manage which domains can authenticate and access your Velt-powered apps."
api: "POST https://api.velt.dev/v1/workspace/domains/add"
---

Use this API to add new organizations and its metadata.

# Endpoint

`POST https://api.velt.dev/v1/workspace/domains/add`

# Headers

<ParamField header="x-velt-api-key" type="string" required>
  Your API key.
</ParamField>

<ParamField header="x-velt-auth-token" type="string" required>
  Your [Auth Token](/security/auth-tokens).
</ParamField>

# Body

#### Params

<ParamField body="data" type="object" required>
  <Expandable title="properties">
    <ParamField body="domains" type="string[]" required>
      Array of domains
    </ParamField>
  </Expandable>
</ParamField>

# Example Request

```JSON
{
  "data": {
     "domains" : [
        "https://www.google.com",
        "https://*.firebase.com"
     ]
  }
}
```

# Example Response

#### Success Response

```JSON
{
    "result": {
        "status": "success",
        "message": "Domain(s) added successfully to allowed domains.",
        "data": {
            "domainsAdded": [
                "google.com",
                "*.firebase.com"
            ]
        }
    }
}

```

#### Failure Response
##### If some domains are already in the allowed domains
```JSON
{
    "error": {
        "details": {
            "domainsAdded": [
                "velt.dev"
            ],
            "skippedDomains": [
                "google.com"
            ]
        },
        "message": "Domain(s) added successfully to allowed domains. Skipped existing domains.",
        "status": "INTERNAL"
    }
}

```

<ResponseExample>
```js
{
    "result": {
        "status": "success",
        "message": "Domain(s) added successfully to allowed domains.",
        "data": {
            "domainsAdded": [
                "google.com",
                "*.firebase.com"
            ]
        }
    }
}
```
</ResponseExample>